--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 *.dll
 *.so
 *.dylib
-
 # Test binary, built with `go test -c`
 *.test
 
@@ -13,3 +12,16 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Intellij project files
+*.iml
+*.ipr
+*.iws
+.idea/
+bin/
+*.tar
+*.log
+log/
+tests/
+# Dependency directories (remove the comment below to include it)
+vendor/
